Mon Jan 12 13:04:57 1998  Doug Evans  <devans@seba.cygnus.com>

	* cgen.c: #include setjmp.h.  Clean up pass over `struct foo' usage.
	(expr_jmp_buf): New static local.
	(cgen_parse_operand): Allow use of longjmp in parsing to handle errors.
	(cgen_md_operand): New function.
	* tc-m32r.c: Clean up pass over `struct foo' usage.
	(md_estimate_size_before_relax): Use CGEN_INSN_MNEMONIC.

Tue Jan  6 15:36:02 1998  Richard Henderson  <rth@cygnus.com>

	* symbols.c (S_SET_SEGMENT): Don't set the segment for section syms.
	(S_IS_EXTERNAL, S_IS_LOCAL): Correct parenthetication.

start-sanitize-sky
Tue Jan  6 13:10:20 1998  Doug Evans  <devans@seba.cygnus.com>

	* config/tc-txvu.c (md_assemble): Handle no separator between
	upper and lower insn #ifndef VERTICAL_BAR_SEPARATOR.
	(assemble_insn): Likewise.

Mon Jan  5 14:54:09 1998  Doug Evans  <devans@seba.cygnus.com>

	* config/tc-txvu.c: #include dis-asm.h, opcode/txvu.h, elf/txvu.h.
	(md_begin): Call txvu_opcode_init_tables.
	(assemble_insn): New function.
	(md_assemble): Beginnings of implementation.

end-sanitize-sky
Fri Jan  2 16:08:54 1998  Ian Lance Taylor  <ian@cygnus.com>

	* config/tc-i386.c (i386_operand): Give an error if there are
	unrecognized characters after an expression.

Wed Dec 31 12:29:47 1997  Jeffrey A Law  (law@cygnus.com)

	* config/tc-mn10200.c (md_relax_table): Correct branch ranges.

start-sanitize-sky
Mon Dec 22 17:57:51 1997  Doug Evans  <devans@canuck.cygnus.com>

	* configure.in: Add txvu support.
	* configure: Regenerate.
	* config/tc-txvu.[ch]: New files.

end-sanitize-sky
Mon Dec 22 13:06:05 1997  Joel Sherrill  <joel@oarcorp.com>

        * configure.in (i386*-go32-rtems*): Fix to be the same as
	i[3456]86-go32.
	* configure: Rebuild.

Mon Dec 22 12:54:07 1997  Ian Lance Taylor  <ian@cygnus.com>

	* config/tc-mips.c (macro): The 4650 doesn't permit M_LDC1_AB,
	M_SDC1_AB, M_L_DOB, M_L_DAB, M_S_DAB, or M_S_DOB.
	(mips_ip): Always check for FP_D, not just for instructions that